--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cripto</title>
-    <script src="abecedario.js"></script>
+    <script src="desencriptar.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     Coloque la palabra a encriptar con el método Julio Cesar
     <input type="text"id="texto">
-    <button id="boton" onclick="analizar()"> Encriptar </button>
+    <button id="boton" onclick="encriptar()"> Encriptar </button>
     <input value="0" type="number" min="0" max="25" id="distancia" required>
     <div id="resultado"></div>
 
